src/main/java/org/example/booktopia/error/InvalidLoginCredentialsException.java
package org.example.booktopia.error;

public class InvalidLoginCredentialsException extends RuntimeException {
    public InvalidLoginCredentialsException() {
        super("Invalid Login Credentials");
    }
}
